--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,3 @@
- <link rel="stylesheet" href="user_profile.css">
+ <!-- <link rel="stylesheet" href="user_profile.css"> -->
  <h1>Codeial/ <%= title %> </h1>
 
